# multiple_orca

./: .gitignore  CMakeLists.txt  README.md  setup.bash  setup_container.bash  setup_dell.bash  three_rov_mission_run.bash
cfg/: bluerov2_heavy_bridge.yaml  orca4_bridge.yaml  rov1_bridge.yaml  sub.parm  sub_heavy.parm  tur2_bridge.yaml  tur3_bridge.yaml
launch/: bringup.py  multi_sim_launch.py  rov_bringup.launch.py  rov_nav.launch.py  sim_launch_heavy.py  start_gz_sim.launch.py
models/bluerov2_heavy/: model.sdf
models/orca4/: model.sdf
models/tur2/: model.sdf
models/tur3/: model.sdf
models_test/tur1/: model.sdf
models_test/tur2/: model.sdf
models_test/tur3/: model.sdf
params/: nav2_params.yaml  rov1_mavros_params.yaml  sim_mavros_params_rov1.yaml  sim_mavros_params_rov2.yaml  sim_mavros_params_tur1.yaml  sim_mavros_params_tur2.yaml  sim_mavros_params_tur3.yaml
scripts/: attach_cable_anchor.py
src/: tf2pose_publisher.cpp
worlds/: sand_empty.world
